
Stu versions are of the form X.Y.Z, where X is the major version, Y is
the minor version and Z the patch level.  For each new patch level, no
new features are added.  When the minor version is incremented, features
are added, which are documented in this file.  When the major version is
increased, backward-incompatible changes are made, which are documented
in the file MIGRATION. 

2016-04-17  Version 1.10:

* Content can be assigned to files using the following syntax:

A = { CONTENT ... }

This works only with file targets without dependencies, and without
output redirection.  

2016-03-26  Version 1.9:

* The algorithm for trivial dependencies (marked with '&') has been
  rewritten, fixing bugs in the previous version, in particular in
  relation to trivial dependencies included indirectly via phonies and
  dynamic dependencies. 
* Flags of variable dependencies can now also be specified outside the
  brackets.  For instance, '!$[X]' is now fully equivalent to '$[!X]'.
  Previously, '!$[X]' was an error.  This is true for all three flags,
  '!', '?', and '&'. 

2016-01-24  Version 1.8:

* Variable dependencies can now be enclosed in parentheses, as in
  '($[A])'.  This was not allowed before. 

2015-11-22  Version 1.7:

* A new flag '&', marks trivial dependencies.  '&' is used as a prefix,
  like '!' and '?'.  Trivial dependencies will never cause a target to
  be rebuilt, but if the target is rebuilt anyway, then they act like
  normal dependencies. They are intended for configuration files
  containing e.g. flags and paths. 

2015-10-22  Version 1.6:

* Both the -f option and the %include directive now allow directories as
  parameters, and will read the file 'main.stu' within them.

2015-10-19  Version 1.5:

* The syntax now allows parentheses (only for grouping, no other
  semantics).  The can contain any number of other dependencies.
  Example:

      (A [B] [(C)]) 

  is equivalent to

      A [B] [C]
