@@ -1,5 +1,6 @@
 Some hints for developing Stu:
 
+* TODO.stu lists the next features to be implemented 
 * Increment the patch version number for any changes
 * Increment the minor version number when backward-compatible new syntax
   is introduced   
@@ -10,6 +11,7 @@ Some hints for developing Stu:
 * Write unit tests for all features, including failure modes 
 * When writing shell scripts, make sure to follow POSIX.  This includes: 
 ** 'sed' has *only* basic regular expressions.  In particular, no '|'. 
+** Shell scripts don't have a filename suffix.  Use '#! /bin/sh'. 
 
 UNIT TESTS
 
@@ -21,5 +23,6 @@ The unit tests have additional requirements:
 * The unit tests assume that the file system supports UTF-8 filenames.
   Stu will work without such a file system, but you can't run the unit
   tests unless you remove the one offending test (test/unicode/).  
-* If you run the tests and they fail, please report that to Jérôme
-  Kunegis <kunegis@gmail.com>.  
+
+If you run the tests and they fail, please report that to Jérôme
+Kunegis <kunegis@gmail.com>.  
