@@ -1,5 +1,5 @@
-.\" Autogenerated on Sun Apr 17 01:14:47 CEST 2016 by ./mkman
-.TH STU 1 "April 2016" "stu-1.10.0" "University of Koblenz-Landau"
+.\" Autogenerated on Sun Apr 17 15:48:40 CEST 2016 by ./mkman
+.TH STU 1 "April 2016" "stu-1.11.0" "University of Koblenz-Landau"
 .SH NAME
 stu \- Build automation
 .SH SYNOPSIS
@@ -239,6 +239,10 @@ and used in the compilation command using the $[CFLAGS] dependency.
 
 Variable dependencies may be declared as existence-only as in '$[!X]'
 and as trivial as in '$[&X]', but not as optional using '?'. 
+By default, the name of the variable set is the same as the filename.
+Another variable name can be used in the following way:
+
+    $[NAME = FILENAME]
 
 Phony targets are marked with '@'.  They are used for targets such
 as '@clean' that do an action without building a file, and for lists of
@@ -545,7 +549,8 @@ introduced with '%'.
 
     rule_list:           rule*
     rule:                ('@' NAME | ['>'] NAME) [':' expression_list] 
-                         (COMMAND | ';')
+                         ('{' COMMAND '}' | ';') 
+                         | NAME '=' '{' CONTENT '}'
     expression_list:     expression*
     expression:          '(' expression_list ')' 
                          | '[' expression_list ']' 
