@@ -238,6 +238,10 @@ and used in the compilation command using the $[CFLAGS] dependency.
 
 Variable dependencies may be declared as existence-only as in '$[!X]'
 and as trivial as in '$[&X]', but not as optional using '?'. 
+By default, the name of the variable set is the same as the filename.
+Another variable name can be used in the following way:
+
+    $[NAME = FILENAME]
 
 Phony targets are marked with '@'.  They are used for targets such
 as '@clean' that do an action without building a file, and for lists of
@@ -544,7 +548,8 @@ introduced with '%'.
 
     rule_list:           rule*
     rule:                ('@' NAME | ['>'] NAME) [':' expression_list] 
-                         (COMMAND | ';')
+                         ('{' COMMAND '}' | ';') 
+                         | NAME '=' '{' CONTENT '}'
     expression_list:     expression*
     expression:          '(' expression_list ')' 
                          | '[' expression_list ']' 
