@@ -245,7 +245,11 @@ OVERVIEW
            CFLAGS: { echo -Wall -Werror >CFLAGS }
 
        Variable dependencies may be declared as existence-only as  in  '$[!X]'
-       and as trivial as in '$[&X]', but not as optional using '?'.
+       and  as  trivial  as  in  '$[&X]',  but  not as optional using '?'.  By
+       default, the name of the variable set is  the  same  as  the  filename.
+       Another variable name can be used in the following way:
+
+           $[NAME = FILENAME]
 
        Phony  targets  are marked with '@'.  They are used for targets such as
        '@clean' that do an action without building a file, and  for  lists  of
@@ -543,7 +547,8 @@ SYNTAX
 
            rule_list:           rule*
            rule:                ('@' NAME | ['>'] NAME) [':' expression_list]
-                                (COMMAND | ';')
+                                ('{' COMMAND '}' | ';')
+                                | NAME '=' '{' CONTENT '}'
            expression_list:     expression*
            expression:          '(' expression_list ')'
                                 | '[' expression_list ']'
@@ -728,4 +733,4 @@ SEE ALSO
 
 
 
-stu-1.10.0                        April 2016                            STU(1)
+stu-1.11.0                        April 2016                            STU(1)
