@@ -1,0 +1,2 @@
+main.stu:1:9: expected filename
+main.stu:1:8: after '=' in variable dependency
