@@ -1,0 +1,1 @@
+main.stu:6:17: variable name 'B.${name}' must be unparametrized
