@@ -1,12 +1,12 @@
-/* Automatically generated by ./mkversion on Sun Apr 17 01:14:49 CEST 2016 */
+/* Automatically generated by ./mkversion on Sun Apr 17 15:39:20 CEST 2016 */
 
 #ifndef VERSION_HH
 #define VERSION_HH
 
-#define STU_VERSION "1.10.0"
+#define STU_VERSION "1.11.0"
 
 #define STU_VERSION_MAJOR 1
-#define STU_VERSION_MINOR 10
+#define STU_VERSION_MINOR 11
 #define STU_VERSION_PATCH 0
 
 #endif /* ! VERSION_HH */
